<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memory</string>
    <string name="tab_plan">Plan</string>
    <string name="version">0.5</string>
    <string name="hello_world">Hello world!</string>
    <string name="msg_main_day">天</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="menu_settings">设置</string>
    <string name="menu_teach">说明</string>
    <string name="menu_aboutus">关于</string>
    <string name="btn_ok">完成</string>
    <string name="btn_cancel">取消</string>
    <string name="msg_name">吧啦吧啦的事情</string>
    <string name="msg_date">纪念哪天</string>
    <string name="msg_nolist">空旷的列表~</string>

    <string name="refresh">刷新完成</string>
    <string name="menu_update">检查更新</string>
    <string name="update_checking">正在检查更新...</string>
    <string name="update_already_updated">最新版本，无需更新~</string>
    <string name="update_dialog_title">发现新版本</string>
    <string name="update_dialog_message">前往下载?</string>
    <string name="update_error">检查更新时发生错误</string>
    <string name="button_ok">好的</string>
    <string name="button_later">以后再说</string>

    <string name="add">添加</string>
    <string name="empty">有什么东西没填~</string>
    <string name="select">选择一个纪念日</string>

    <string name="app_widget_color">桌面插件文字颜色</string>
    <string name="white">白色</string>
    <string name="black">黑色</string>

    <string name="record">记录</string>
    <string name="motion">动作</string>
    <string name="group">组数</string>
    <string name="number_of_group">每组数量</string>
    <string name="current_weight">当前重量</string>
    <string name="add_motion">添加动作</string>
    <string name="add_record">添加重量</string>
    <string name="weight">重量(Kg)</string>
    <string name="date">日期</string>

    <string name="chest">大胸</string>
    <string name="back">宽背</string>
    <string name="leg">肩腿</string>
    <string name="part">部位</string>

    <string name="menu_backup">备份与恢复</string>
    <string name="prompt_name">名字</string>
    <string name="prompt_password">口令</string>
    <string name="btn_backup">备份到云端</string>
    <string name="btn_recover">从云端恢复</string>

    <string name="net_error">网络错误</string>
    <string name="backup_0">备份成功</string>
    <string name="backup_1">备份失败(1)</string>
    <string name="backup_2">备份失败(2)</string>
    <string name="backup_3">口令不对</string>
    <string name="no_data">没你的数据</string>
    <string name="recover_0">恢复成功</string>

    <string name="exit">返回</string>
    <string name="change_memory">修改Memory</string>
    <string name="change_plan">修改Plan</string>
    <string name="add_memory">添加Memory</string>
    <string name="add_plan">添加Plan</string>

    <string name="short_plan">短期</string>
    <string name="middle_plan">中期</string>
    <string name="far_plan">远期</string>
    <string name="which_plan">哪期</string>

</resources>
