<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="com.duanyufei.memory.MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="0"
        app:showAsAction="always"
        android:icon="@mipmap/ic_add_black_36dp"
        android:title="@string/action_add"/>
	<item
	    android:id="@+id/menu_settings"
	    android:title="@string/menu_settings"
	    android:orderInCategory="100"/>
	<item
	    android:id="@+id/menu_teach"
	    android:title="@string/menu_teach"
	    android:orderInCategory="100"/>

	<item
		android:id="@+id/menu_update"
		android:title="@string/menu_update"
		android:orderInCategory="100"/>

	<item
	    android:id="@+id/menu_aboutus"
	    android:title="@string/menu_aboutus"
	    android:orderInCategory="100"/>
    

</menu>
