<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_content"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="cn.duanyufei.memory.AddMotionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_arrow_back_white_36dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/add_motion"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/txt_motion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/motion"
            android:maxLines="1"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/txt_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/txt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_group"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp">

        <AutoCompleteTextView
            android:id="@+id/txt_cur_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_weight"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/part"
        android:textSize="20sp"/>

    <RadioGroup
        android:id="@+id/rg_pos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp">

        <RadioButton
            android:id="@+id/rb_chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chest"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/rb_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/rb_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leg"
            android:textSize="18dp"/>
    </RadioGroup>
</LinearLayout>