<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.duanyufei.memory.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_arrow_back_white_36dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/menu_settings" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_widget_color"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/rdo_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdo_color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            android:textColor="@color/secondaryText"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/rdo_color_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/black"
            android:textColor="@color/secondaryText"
            android:textSize="25sp" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/accent" />


</LinearLayout>
