<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.duanyufei.memory.BackupActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_arrow_back_white_36dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/menu_backup" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:spb_color="@color/accent"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="true"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            app:spb_reversed="false"
            app:spb_sections_count="4"
            app:spb_speed="2.0"
            app:spb_stroke_separator_length="4dp"
            app:spb_stroke_width="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_backup"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/btn_backup"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_rect"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_recover"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_rect"
                android:text="@string/btn_recover"
                android:layout_width="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:layout_height="50dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
